...
    <string name="grama">grama</string>
    <string name="logo">logo</string>

    <string name="comparar_jogador_string">Comparar Jogadores de mesma Posição</string>
    <string name="ranking_jogador_string">Ranking de Jogador por Posição</string>
    <string name="info_jogador_string">Informações de Jogadores</string>
    <string name="comparar_time_string">Comparar Times</string>
    <string name="info_time_string">Informações de Times</string>
    <string name="ranking_time_string">Ranking de Times</string>

    <string name="centroavante_string">Centroavante</string>
    <string name="seg_ata_string">Segundo Atacante</string>
    <string name="gol_string">Goleiro</string>
...
    <string name="seg_vol_string">Segundo Volante</string>
    <string name="zagueiro_string">Zagueiro</string>

    <string name="aGO_string">Atlético-GO</string>
    <string name="aMG_string">Atlético-MG</string>
    <string name="aPR_string">Atlético-PR</string>
    <string name="avai_string">Avaí</string>
    <string name="bahia_string">Bahia</string>
    <string name="botafogo_string">Botafogo</string>
    <string name="chapocoense_string">Chapecoense</string>
    <string name="corinthians_string">Corinthians</string>
    <string name="coritiba_string">Coritiba</string>
    <string name="cruzeiro_string">Cruzeiro</string>
    <string name="flamengo_string">Flamengo</string>
    <string name="fluminense_string">Fluminense</string>
...
    <string name="escolher_pos_string">Escolha a posição:</string>
    <string name="buscar_string">Buscar</string>
    <string name="buscar_jogador_time_string">Ordenar por\n time</string>
    <string name="buscar_jogador_posicao_string">Ordenar por\n posição</string>
    <string name="escolher_times_string">Escolha dois times para serem comparados:</string>
    <string name="escolher_jogadores_string">Escolha dois jogadores para serem comparados:</string>
    <string name="comparar_string">Comparar</string>
    <string name="nome_string">nome</string>
    <string name="time_string">time</string>
    <string name="col_string">col.</string>
    <string name="pts_string">pts.</string>
    <string name="gols_string">gols</string>
    <string name="colPts_string">col. pts.</string>
...
