...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/compTimes_botao"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:text="@string/comparar_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
    <TextView
        android:id="@+id/compTimes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_a_serem_comparados_string"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/compTimes_listView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/compTimes_time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
