...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learn2fantasy.learn2fantasy.ExibirComparacaoTimeActivity">

    <TextView
        android:id="@+id/exibCompTime_time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_string"
        android:textSize="20sp"
        android:textColor="@color/corDestaque"
        android:textStyle="bold"
...
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/exibCompTime_containerMeio" />

    <TextView
        android:id="@+id/exibCompTime_time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_string"
        android:textSize="20sp"
        android:textColor="@color/corDestaque"
        android:textStyle="bold"
...
